--- a/interface/package.json
+++ b/interface/package.json
@@ -3,6 +3,8 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
+		"@shoelace-style/react-wrapper": "^1.0.3",
+		"@shoelace-style/shoelace": "^2.0.0-beta.14",
 		"@testing-library/jest-dom": "^4.2.4",
 		"@testing-library/react": "^9.5.0",
 		"@testing-library/user-event": "^7.2.1",
