--- a/interface/package.json
+++ b/interface/package.json
@@ -14,6 +14,7 @@
 		"react": "^16.13.1",
 		"react-bootstrap": "^1.2.2",
 		"react-dom": "^16.13.1",
+		"react-intersection-observer": "^8.28.1",
 		"react-router-dom": "^5.2.0",
 		"react-scripts": "3.4.1"
 	},
