--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"aos": "^3.0.0-beta.6",
 		"bcrypt": "^5.0.0",
 		"body-parser": "^1.19.0",
 		"concurrently": "^5.2.0",
